--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-reboot@4.3.1/reboot.css" integrity="sha256-NqCb52G5cOo+mE3Q1asDA+xnvGifFUpu4N5+7vWLyD0=" crossorigin="anonymous">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/bb.css">
 
